clean up some stuff

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="">get start</a></li>
                 <li><a href="">about</a></li>
                 <li><a href="">team</a></li>
-                <li><a href="">contact us</a></li>
+                <li><a href="">testimonials</a></li>
                 <li><a href="">potfolio</a></li>
             </ul>
             
