complate the html content, start working on the service section

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         <section class="section service-section">
             <div class="container">
                 <h5>future hose</h5>
-                <h3>
+                <h4>
                     What you look your hopefull house we can be made it for yours. We can be design yours house so dont woory you can hire
                     us. Beautiful and hand made design we can be create.
-                </h3>
+                </h4>
                 <div class="row">
                     <a href="" class="col-sm-12 col-md-6 col-lg-4">
                         <div>
@@ -215,13 +215,109 @@
             </div>
         </section>
         <section class="section testimonial-section">
-            <h2>testimonial section</h2>
+            <div class="container">
+                <div class="row">
+                    <h5>
+                        Aklima The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections Bonorum
+                        et Malorum original.
+                    </h5>
+                    <p><span class='name'>zakaria</span> _ ceo bensalek enterprises, mar</p>
+                    <div class="members">
+                        <div class="thumbnail"><img src="" alt=""></div>
+                        <div class="thumbnail"><img src="" alt=""></div>
+                        <div class="thumbnail"><img src="" alt=""></div>
+                        <div class="thumbnail"><img src="" alt=""></div>
+                        <div class="thumbnail"><img src="" alt=""></div>
+                        <div class="thumbnail"><img src="" alt=""></div>
+                        <div class="thumbnail"><img src="" alt=""></div>
+                        <div class="thumbnail"><img src="" alt=""></div>
+                    </div>
+                </div>
+            </div>
+
         </section>
         <section class="section portfolio-section">
-            <h2>portofolio section</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="portfolio-header">
+
+                    </div>
+                    <div class="projects">
+                        <div class="project">
+                            <img src="" alt="">
+                            <div class="project-content">
+                                <span></span>
+                                <h5></h5>
+                                <a href="" class="btn">project 1</a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <img src="" alt="">
+                            <div class="project-content">
+                                <span></span>
+                                <h5></h5>
+                                <a href="" class="btn">project 2</a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <img src="" alt="">
+                            <div class="project-content">
+                                <span></span>
+                                <h5></h5>
+                                <a href="" class="btn">project 3</a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <img src="" alt="">
+                            <div class="project-content">
+                                <span></span>
+                                <h5></h5>
+                                <a href="" class="btn">project 4</a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <img src="" alt="">
+                            <div class="project-content">
+                                <span></span>
+                                <h5></h5>
+                                <a href="" class="btn">project 5</a>
+                            </div>
+                        </div>
+                        <div class="project">
+                            <img src="" alt="">
+                            <div class="project-content">
+                                <span></span>
+                                <h5></h5>
+                                <a href="" class="btn">project 6</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="circles">
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <a href="#" class="logo"> &ltzakaria azaraf/&gt </a>
+                <div class="footer-social-media">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-github"></i>
+                    <p>Copyright © 2020 Rainbow-Themes. All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- Jquery library-->
