--- a/index.html
+++ b/index.html
@@ -131,24 +131,36 @@
             </div>
         </section>
         <section class="section taste-image">
-            <div class="col-sm-12 col-lg-6">
-                <img src="./assets/images/featured-01.jpg" alt="Features">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-lg-6 px-0">
+                        <div class="thumbnail">
+                            <img src="./assets/images/featured-01.jpg" alt="Features">
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-lg-6">
+                        <p class='title text-capitalize'>
+                            <span>modern</span> design for interior
+                        </p>
+                        <h3>Provide a Modern Design For Your Home and Office</h3>
+                        <p>Uniq interior design provide for your home. you can be create as you like. Our modern designer provide as you are
+                            like.
+                            A interior designer can build your design and fullfile your demand.Uniq interior design provide for your home.
+                            you can
+                            be create as you like. Our modern designer provide as you are like. A interior designer can build your design
+                            and
+                            fullfile your demand</p>
+                        <ul>
+                            <li>Yet this above sewed flirted opened ouch</li>
+                            <li>Goldfinch realistic sporadic ingenuous</li>
+                            <li>Abominable this abidin far successfully then like piquan</li>
+                            <li>Risus commodo viverra</li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-12 col-lg-6">
-                <p><span>modern</span>design for interior</p>
-                <h3>Provide a Modern Design For Your Home and Office</h3>
-                <p>Uniq interior design provide for your home. you can be create as you like. Our modern designer provide as you are like.
-                A interior designer can build your design and fullfile your demand.Uniq interior design provide for your home. you can
-                be create as you like. Our modern designer provide as you are like. A interior designer can build your design and
-                fullfile your demand</p>
-                <ul>
-                    <li>Yet this above sewed flirted opened ouch</li>
-                    <li>Goldfinch realistic sporadic ingenuous</li>
-                    <li>Abominable this abidin far successfully then like piquan</li>
-                    <li>Risus commodo viverra</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing</li>
-                </ul>
-            </div>
+            
         </section>
         <section class="section team-section">
             <div class="container">
