add the portfolio images

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     </div>
                     <div class="projects">
                         <div class="project">
-                            <img src="" alt="">
+                            <img src="./assets/images/portfolio-4.jpg" alt="">
                             <div class="project-content">
                                 <span></span>
                                 <h5></h5>
@@ -304,7 +304,7 @@
                             </div>
                         </div>
                         <div class="project">
-                            <img src="" alt="">
+                            <img src="./assets/images/portfolio-1.jpg" alt="">
                             <div class="project-content">
                                 <span></span>
                                 <h5></h5>
@@ -312,7 +312,7 @@
                             </div>
                         </div>
                         <div class="project">
-                            <img src="" alt="">
+                            <img src="./assets/images/portfolio-3.jpg" alt="">
                             <div class="project-content">
                                 <span></span>
                                 <h5></h5>
@@ -320,7 +320,7 @@
                             </div>
                         </div>
                         <div class="project">
-                            <img src="" alt="">
+                            <img src="./assets/images/portfolio-5.jpg" alt="">
                             <div class="project-content">
                                 <span></span>
                                 <h5></h5>
@@ -328,7 +328,7 @@
                             </div>
                         </div>
                         <div class="project">
-                            <img src="" alt="">
+                            <img src="./assets/images/portfolio-7.jpg" alt="">
                             <div class="project-content">
                                 <span></span>
                                 <h5></h5>
@@ -336,7 +336,7 @@
                             </div>
                         </div>
                         <div class="project">
-                            <img src="" alt="">
+                            <img src="./assets/images/portfolio-4.jpg" alt="">
                             <div class="project-content">
                                 <span></span>
                                 <h5></h5>
