--- a/index.html
+++ b/index.html
@@ -303,65 +303,65 @@
             </div>
             <div class="fontainer-fluid">
                 <div class="projects justify-content-center">
-                    <div class="project col-auto col-sm-6 col-lg-4">
+                    <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-4.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-12 px-4 px-md-3'>
+                            <div class='col-8 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
-                                <a href="" class="btn">project 1</a>
+                                <a href="" class="btn px-lg-4">project 1</a>
                             </div>
                             
                         </div>
                     </div>
-                    <div class="project col-auto col-sm-6 col-lg-4">
+                    <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-1.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-12 px-4 px-md-3'>
+                            <div class='col-8 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
-                                <a href="" class="btn">project 2</a>
+                                <a href="" class="btn px-lg-4">project 2</a>
                             </div>
                             
                         </div>
                     </div>
-                    <div class="project col-auto col-sm-6 col-lg-4">
+                    <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-3.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-12 px-4 px-md-3'>
+                            <div class='col-8 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
-                                <a href="" class="btn">project 3</a>
+                                <a href="" class="btn px-lg-4">project 3</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project col-auto col-sm-6 col-lg-4">
+                    <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-5.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-12 px-4 px-md-3'>
+                            <div class='col-8 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
-                                <a href="" class="btn">project 4</a>
+                                <a href="" class="btn px-lg-4">project 4</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project col-auto col-sm-6 col-lg-4">
+                    <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-7.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-12 px-4 px-md-3'>
+                            <div class='col-8 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
-                                <a href="" class="btn">project 5</a>
+                                <a href="" class="btn px-lg-4">project 5</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project col-auto col-sm-6 col-lg-4">
+                    <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-4.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-12 px-4 px-md-3'>
+                            <div class='col-8 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
-                                <a href="" class="btn">project 6</a>
+                                <a href="" class="btn px-lg-4">project 6</a>
                             </div>
                         </div>
                     </div>
