upload the day's progress

--- a/index.html
+++ b/index.html
@@ -306,18 +306,17 @@
                     <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-4.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-10 px-4 px-md-3'>
+                            <div class='col-10 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
                                 <a href="" class="btn px-lg-4">project 1</a>
-                            </div>
-                            
+                            </div>                        
                         </div>
                     </div>
                     <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-1.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-10 px-4 px-md-3'>
+                            <div class='col-10 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
                                 <a href="" class="btn px-lg-4">project 2</a>
@@ -326,9 +325,9 @@
                         </div>
                     </div>
                     <div class="project col-auto col-sm-6 col-lg-3">
-                        <img src="./assets/images/portfolio-3.jpg" alt="">
+                        <div class="img-wrapper"><img src="./assets/images/portfolio-3.jpg" alt=""></div>
                         <div class="project-content row">
-                            <div class='col-8 col-md-10 px-4 px-md-3'>
+                            <div class='col-10 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
                                 <a href="" class="btn px-lg-4">project 3</a>
@@ -338,7 +337,7 @@
                     <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-5.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-10 px-4 px-md-3'>
+                            <div class='col-10 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
                                 <a href="" class="btn px-lg-4">project 4</a>
@@ -348,17 +347,17 @@
                     <div class="project col-auto col-sm-6 col-lg-3">
                         <img src="./assets/images/portfolio-7.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-10 px-4 px-md-3'>
+                            <div class='col-10 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
                                 <a href="" class="btn px-lg-4">project 5</a>
                             </div>
                         </div>
                     </div>
-                    <div class="project col-auto col-sm-6 col-lg-3">
+                    <div class="project col-auto col-sm-6 col-lg-3 d-none">
                         <img src="./assets/images/portfolio-4.jpg" alt="">
                         <div class="project-content row">
-                            <div class='col-8 col-md-10 px-4 px-md-3'>
+                            <div class='col-10 col-md-10 px-4 px-md-3'>
                                 <span class="text-capitalize">developpemnt</span>
                                 <h4 class="text-capitalize">getting tickets to the big show</h4>
                                 <a href="" class="btn px-lg-4">project 6</a>
