--- a/index.html
+++ b/index.html
@@ -379,12 +379,12 @@
                     </div>
                 </div>
                 <div class="circles">
-                    <span class="circle" dataId='1'></span>
-                    <span class="circle" dataId='2'></span>
-                    <span class="circle active" dataId='3'></span>
-                    <span class="circle" dataId='4'></span>
-                    <span class="circle" dataId='5'></span>
-                    <span class="circle" dataId='6'></span>
+                    <span class="circle" data-id='1'></span>
+                    <span class="circle" data-id='2'></span>
+                    <span class="circle active" data-id='3'></span>
+                    <span class="circle" data-id='4'></span>
+                    <span class="circle" data-id='5'></span>
+                    <span class="circle" data-id='6'></span>
                 </div>
             </div>
                 
