complate the responsive devices

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-8">
-                        <h2>mett our designers</h2>
+                        <h2>meet our designers</h2>
                         <p>
                             There are many variations of passages of Lorem Ipsum available,
                             but the majority have suffered alteration.
@@ -254,7 +254,7 @@
         <section class="section testimonial-section">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="testimonial-texts col-12 col-md-8">
+                    <div class="testimonial-texts col-12 col-md-8 col-lg-10">
                         <div class="inner-desc">
                             <h5 class='description'>
                                 Aklima The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
@@ -272,7 +272,7 @@
 
 
                 <div class="row justify-content-center">
-                    <div class="members col-12 col-md-8 row justify-content-center">
+                    <div class="members col-12 col-md-8 col-lg-6 row justify-content-center">
                         <div class="thumbnail"><img src="./assets/images/testimonial-1.jpg" alt=""></div>
                         <div class="thumbnail"><img src="./assets/images/testimonial-2.jpg" alt=""></div>
                         <div class="thumbnail"><img src="./assets/images/testimonial-3.jpg" alt=""></div>
@@ -450,8 +450,11 @@
     </main>
     <footer>
         <div class="container-fluid">
-                <div class="row justify-content-between align-items-center text-center">
-                    <a href="#" class="logo col-12 col-md-4"> &ltzakaria azaraf/&gt </a>
+                <div class="row justify-content-between align-items-center">
+                    <div>
+                        <a href="#" class="logo col-12 col-md-4"> &ltzakaria azaraf/&gt </a>
+                    </div>
+                    
                     <div class="footer-social-media col-12 col-md-4">
                         <i class="fab fa-facebook"></i>
                         <i class="fab fa-twitter"></i>
