--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- The Normalize Css File -->
     <link rel="stylesheet" href="assets/css/libs/normalize.css">
     <!-- Main Css File -->
-    <link rel="stylesheet" href="assets/css/custom/main.css">
+    <link rel="stylesheet" href="assets/css/styles/main.css">
 </head>
 
 <body>
